# agentic-db-migrator

./: .env.example  .gitignore  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt.txt  streamlit_app.py
seed/: source.sql
src/amo/: cli.py
src/amo/core/: analysis.py  config.py  executor.py  executor_v2.py  heuristic_planner.py  heuristic_planner_v2.py  manifest_builder.py  verifier.py  verifier_v2.py  workflow_models.py
src/amo/core/planners/: gemini.py  heuristic_planner.py  llm_common.py  llm_stub.py  models.py  ollama.py  remote_demo.py
src/amo/migration/: introspect.py  transfer.py
tests/: test_analysis.py  test_cli_plan.py  test_cli_workflow.py  test_gemini_planner.py  test_heuristic_planner.py  test_remote_demo_planner.py  test_verifier.py
v1/src/amo/core/: executor_v1.py  manifest_builder_v1.py
